@@ -35,6 +35,7 @@
     <hr>
     We do have the documentation for previous releases
     <ul>
+      <LI><P><A HREF="6.0.2/html">6.0.2</A></P></LI>
       <LI><P><A HREF="6.0.1/html">6.0.1</A></P></LI>
       <LI><P><A HREF="6.0.0/html">6.0.0</A></P></LI>
       <LI><P><A HREF="5.8.3/html">5.8.3</A></P></LI>
